с ошибкой в тесте import SortableTable from '../solution/index';

--- a/07-async-code-fetch-api-part-1/2-sortable-table-v3/index.html
+++ b/07-async-code-fetch-api-part-1/2-sortable-table-v3/index.html
@@ -10,7 +10,7 @@
   <div id="root"></div>
 
   <script type="module">
-    import SortableTable from '../solution/index.js';
+    import SortableTable from './index.js';
 
     const header = [
       {
